--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.2.20
 djangorestframework==3.15.2
 idna==3.10
 psycopg2==2.9.10
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
