--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,48 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.11
+aiosignal==1.3.1
+annotated-types==0.7.0
 asgiref==3.8.1
+async-timeout==5.0.1
+attrs==25.3.0
 backports.zoneinfo==0.2.1
+bitarray==3.3.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+ckzg==2.1.1
+cytoolz==1.0.1
 Django==4.2.20
 djangorestframework==3.15.2
+eth-account==0.13.6
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.7.0
+eth-rlp==2.2.0
+eth-typing==5.2.0
+eth-utils==5.2.0
+eth_abi==5.2.0
+frozenlist==1.5.0
+hexbytes==1.3.0
 idna==3.10
-psycopg2==2.9.10
+multidict==6.1.0
+parsimonious==0.10.0
+propcache==0.2.0
+psycopg2-binary==2.9.10
+pycryptodome==3.22.0
+pydantic==2.10.6
+pydantic_core==2.27.2
 python-dotenv==1.0.1
+pyunormalize==16.0.0
+pywin32==310
+regex==2024.11.6
 requests==2.32.3
+rlp==4.1.0
 sqlparse==0.5.3
+toolz==1.0.0
+types-requests==2.32.0.20241016
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.2.3
+web3==7.10.0
+websockets==13.1
+yarl==1.15.2
