--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -20,5 +20,6 @@ jobs:
         port: 22
         script: |
           cd /home/ubuntu/nft_project
-          git pull
+          git checkout release
+          git pull origin release
           sudo systemctl restart uwsgi
