feat: 테스트를 위한 임시 코드 추가

--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -1,10 +1,7 @@
 name: Django Deploy
 
 on:
-  workflow_run:
-    workflows: ["Django CI"]
-    types:
-      - completed
+  push:
     branches: [ "release" ]
 
 jobs:
