feat: 임시 코드 삭제

--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -1,7 +1,10 @@
 name: Django Deploy
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Django CI"]
+    types:
+      - completed
     branches: [ "release" ]
 
 jobs:
