--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -30,6 +30,15 @@ jobs:
           echo "< requirements.txt installed >"
           git pull origin release
           echo "< pulled completed >"
+          echo "KLIP_PREPARE_URL=${{ secrets.KLIP_PREPARE_URL }}" >> .env
+          echo "KLIP_REQUEST_URL=${{ secrets.KLIP_REQUEST_URL }}" >> .env
+          echo "KLIP_RESULT_URL=${{ secrets.KLIP_RESULT_URL }}" >> .env
+          echo "ADMIN_ADDRESS=${{ secrets.ADMIN_ADDRESS }}" >> .env
+          echo "ADMIN_PRIVATE_KEY=${{ secrets.ADMIN_PRIVATE_KEY }}" >> .env
+          echo "NFT_CONTRACT_ADDRESS=${{ secrets.NFT_CONTRACT_ADDRESS }}" >> .env
+          echo "KLAYTN_RPC_URL=${{ secrets.KLAYTN_RPC_URL }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "BAPP_NAME=${{ secrets.BAPP_NAME }}" >> .env
           echo "{\"SECRET_KEY\": \"$SECRET_KEY\"}" > secrets.json
           echo "< secrets.json file created >"
           nohup python manage.py runserver 0.0.0.0:8000 &
