--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -37,8 +37,12 @@ jobs:
           echo "ADMIN_PRIVATE_KEY=${{ secrets.ADMIN_PRIVATE_KEY }}" >> .env
           echo "NFT_CONTRACT_ADDRESS=${{ secrets.NFT_CONTRACT_ADDRESS }}" >> .env
           echo "KLAYTN_RPC_URL=${{ secrets.KLAYTN_RPC_URL }}" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "BAPP_NAME=${{ secrets.BAPP_NAME }}" >> .env
           echo "{\"SECRET_KEY\": \"$SECRET_KEY\"}" > secrets.json
           echo "< secrets.json file created >"
-          nohup python manage.py runserver 0.0.0.0:8000 &
+          python manage.py makemigrations
+          python manage.py migrate
+          python manage.py runserver 0.0.0.0:8000 &
