--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -41,4 +41,6 @@ jobs:
           echo "BAPP_NAME=${{ secrets.BAPP_NAME }}" >> .env
           echo "{\"SECRET_KEY\": \"$SECRET_KEY\"}" > secrets.json
           echo "< secrets.json file created >"
-          nohup python manage.py runserver 0.0.0.0:8000 &
+          python manage.py makemigrations
+          python manage.py migrate
+          python manage.py runserver 0.0.0.0:8000 &
