--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ annotated-types==0.7.0
 asgiref==3.8.1
 async-timeout==5.0.1
 attrs==25.3.0
+backports.zoneinfo==0.2.1
 bitarray==3.3.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 ckzg==2.1.1
 cytoolz==1.0.1
 Django==4.2.20
+django-cron==0.6.0
 djangorestframework==3.15.2
 eth-account==0.13.6
 eth-hash==0.7.1
@@ -46,4 +48,3 @@ urllib3==2.2.3
 web3==7.10.0
 websockets==13.1
 yarl==1.15.2
-django_cron-0.6.0
