--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -25,6 +25,7 @@ jobs:
         script: |
           cd /home/ubuntu/nft_project
           source venv/bin/activate
+          pkill -f runserver
           cd /home/ubuntu/nft_project
           pip install -r requirements.txt
           echo "< requirements.txt installed >"
