feat: 디렉토리 경로 수정

--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -46,4 +46,5 @@ jobs:
           python manage.py migrate --fake-initial
           python manage.py makemigrations
           python manage.py migrate
+          python manage.py crontab add
           python manage.py runserver 0.0.0.0:8000 &
